# transactional-documents-lam

./: README.md  environment.yml  pyproject.toml
src/label_studio/: evaluation.py  import_label_studio.py  label_studio_interface.xml  label_studio_model.py
src/model/: constraints.py  dataset.py  document.py  invoice.py
src/utils/: config.py  json_evaluator.py  metrics.py  ocr.py  parallel.py  utils.py
tests/: parse_test.py
